--- a/PROJETPHOTO/html/CSS/app.css
+++ b/PROJETPHOTO/html/CSS/app.css
@@ -1,22 +1,199 @@
-html {
-    background-color: #50504b;
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
 }
 
 #nom_site {
-    text-shadow:0 0 2px #FFD100,0 0 30px #FFD100,0px 0px 5px #FFD100, 0 0 150px #FFD100;color:#FFD100;
+    text-shadow: 0 0 2px #FFD100,0 0 30px #FFD100, 0px 0px 5px #FFD100, 0 0 150px #FFD100;
+    color:#FFD100;
     background-color:#50504b;
+    padding: 10px;
+    padding-right: 50px;
+    padding-left: 50px;
     text-align: center;
+    position: fixed;
+	top: 2%;
+	left: 45%;
 }
 
+.container {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #50504b;
+  transition: 0.5s;
+  padding: 20px;
+}
 
+.container#blur.active {
+  filter: blur(20px);
+  pointer-events: none;
+  user-select: none;
+}
 
+.container .content {
+  position: relative;
+  max-width: 800px;
+}
 
-/* Choisir image */
+h2 {
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+.container .content img {
+  max-width: 100%;
+  display: block;
+}
+
+a {
+  position: relative;
+  padding: 5px 20px;
+  display: inline-block;
+  margin-top: 20px;
+  text-decoration: none;
+  color: #fff;
+  background: #111;
+}
+
+#popup {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 600px;
+  padding: 50px;
+  box-shadow: 0 5px 30px rgba(0, 0, 0, .30);
+  background: black;
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+#popup.active {
+  top: 50%;
+  visibility: visible;
+  opacity: 1;
+  transition: 0.5s;
+}
+
+/* Largeur complète pour les champs de saisie */
+.form-container input[type="text"],
+.form-container input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #eee;
+}
+
+/* Quand les entrées sont concentrées, faites quelque chose */
+.form-container input[type="text"]:focus,
+.form-container input[type="password"]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Stylez le bouton de connexion */
+.form-container .btn {
+  background-color: #8ebf42;
+  color: #fff;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom: 10px;
+  opacity: 0.8;
+}
+
+/*
+// Stylez le bouton pour annuler
+.form-container .cancel {
+  background-color: #cc0000;
+}
+*/
+
+/* Planez les effets pour les boutons */
+.form-container .btn:hover,
+.open-button:hover {
+  opacity: 1;
+}
+
+article form {
+width: 580px;
+background: black;
+margin: 0 auto;
+padding: 20px;
+border: 1px solid black;
+border-radius: 10px;
+}
+
+article form ol {
+padding-left: 0;
+}
+
+article form li,
+div > p {
+background: #eee;
+display: relative;
+justify-content: space-between;
+margin-bottom: 10px;
+margin-top: -7px;
+list-style-type: none;
+border: 1px solid black;
+border-radius: 10px;
+}
+
+article form img {
+height: 64px;
+order: 1;
+}
+
+article form p {
+line-height: 32px;
+padding-left: 10px;
+}
+
+article form label,
+article form button {
+background-color: #8f8f8f;
+color: white;
+padding: 5px 10px;
+border-radius: 10px;
+border: 1px ridge black;
+font-size: 1rem;
+height: auto;
+}
+
+article form label:hover,
+article form button:hover {
+background-color: #50504b;
+color: #FFD100;
+text-shadow: 0 0 2px #FFD100,0 0 30px #FFD100, 0px 0px 5px #FFD100, 0 0 150px #FFD100;
+}
+
+article form label:active,
+article form button:active {
+background-color: #FFD100;
+color: white;
+}
+
+/* Choisir image 
 .parent-div {
     display: inline-block;
     position: relative;
     overflow: hidden;
   }
+
   .parent-div input[type=file] {
     left: 0;
     top: 0;
@@ -24,6 +201,7 @@ html {
     position: absolute;
     font-size: 90px;
   }
+
   .btn-upload {
     background-color: #fff;
     border: 3px solid #000;
@@ -32,105 +210,4 @@ html {
     border-radius: 10px;
     font-size: 22px;
     font-weight: bold;
-  }
-
-
-
-
-
-
-
-
-
-
-
-  body {
-    padding: 0;
-    margin: 0;
-  }
-
-  svg:not(:root) {
-    display: block;
-  }
-
-  .playable-code {
-    background-color: #f4f7f8;
-    border: none;
-    border-left: 6px solid #558abb;
-    border-width: medium medium medium 6px;
-    color: #4d4e53;
-    height: 100px;
-    width: 90%;
-    padding: 10px 10px 0;
-  }
-
-  .playable-canvas {
-    border: 1px solid #4d4e53;
-    border-radius: 2px;
-  }
-
-  .playable-buttons {
-    text-align: right;
-    width: 90%;
-    padding: 5px 10px 5px 26px;
-  }
-
-
-
-  html {
-font-family: sans-serif;
-}
-
-form {
-width: 580px;
-background: #ccc;
-margin: 0 auto;
-padding: 20px;
-border: 1px solid black;
-}
-
-form ol {
-padding-left: 0;
-}
-
-form li,
-div > p {
-background: #eee;
-display: flex;
-justify-content: space-between;
-margin-bottom: 10px;
-list-style-type: none;
-border: 1px solid black;
-}
-
-form img {
-height: 64px;
-order: 1;
-}
-
-form p {
-line-height: 32px;
-padding-left: 10px;
-}
-
-/*form label,*/
-form button {
-background-color: #7f9ccb;
-padding: 5px 10px;
-border-radius: 5px;
-border: 1px ridge black;
-font-size: 0.8rem;
-height: auto;
-}
-
-/*form label:hover,*/
-form button:hover {
-background-color: #2d5ba3;
-color: white;
-}
-
-/*form label:active,*/
-form button:active {
-background-color: #0d3f8f;
-color: white;
-}
+  }*/
