--- a/PROJETPHOTO/html/CSS/app.css
+++ b/PROJETPHOTO/html/CSS/app.css
@@ -88,7 +88,6 @@ a {
 
 /* Largeur complète pour les champs de saisie */
 .form-container input[type="text"],
-.form-container input[type="checkbox"],
 select{
   width: 100%;
   padding: 10px;
@@ -99,7 +98,6 @@ select{
 
 /* Quand les entrées sont concentrées, faites quelque chose */
 .form-container input[type="text"]:focus,
-.form-container input[type="checkbox"]:focus,
 select {
   background-color: #ddd;
   outline: none;
@@ -107,7 +105,7 @@ select {
 
 /* Stylez le bouton de connexion */
 .form-container .btn {
-  background-color: green,
+  background-color: lightblue;
   color: #fff;
   padding: 12px 20px;
   border: none;
