--- a/PROJETPHOTO/html/CSS/app.css
+++ b/PROJETPHOTO/html/CSS/app.css
@@ -189,6 +189,46 @@ background-color: #FFD100;
 color: white;
 }
 
+label .password-icon {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  width: 20px;
+  color: #f9f9f9;
+  transition: all 0.2s;
+}
+
+label .password-icon:hover {
+  cursor: pointer;
+  color: #ff4754;
+}
+
+label .password-icon .feather-eye-off {
+  display: none;
+}
+
+label #mdp{
+  position: relative;
+}
+
+label #mdp input {
+  font-size: 1em;
+  color: #f9f9f9;
+  background: transparent;
+  padding: 1rem 1.2rem;
+  width: 350px;
+  border-radius: 5px;
+  border: 2px solid #7a7a7a;
+  transition: all 0.2s;
+}
+
+label #mdp input:focus {
+  border-color: #ff4754;
+}
+
 /* Choisir image 
 .parent-div {
     display: inline-block;
