--- a/PROJETPHOTO/html/CSS/app.css
+++ b/PROJETPHOTO/html/CSS/app.css
@@ -10,23 +10,29 @@ body {
 	background-color:#50504b;
 }
 
+header{
+  background-color:#2e2e27;
+}
+
 #nom_site {
-    /*text-shadow: 0 0 2px #FFD100,0 0 30px #FFD100, 0px 0px 5px #FFD100, 0 0 150px #FFD100;
-    color:#FFD100;
-    background-color:#50504b;
-    padding: 10px;
-    padding-right: 50px;
-    padding-left: 50px;
-    text-align: center;
-    position: fixed;
-	top: 2%;
-	left: 45%;*/
+  text-shadow: 0 0 2px #FFD100,0 0 30px #FFD100, 0px 0px 5px #FFD100, 0 0 150px #FFD100;
+  color:#FFD100;
+  padding: 10px;
+  padding-right: 50px;
+  padding-left: 50px;
+  padding-bottom: 3%;
+  text-align: center;
+}
+
+#degrader{
+  background: linear-gradient(#2e2e27, #50504b);
+  height: 60px;
 }
 
 .container {
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  min-height: 60vh;
   display: flex;
   justify-content: center;
   align-items: center;
